--- a/build.gradle
+++ b/build.gradle
@@ -8,16 +8,21 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
     }
 }
 
 allprojects {
     apply plugin: 'java'
     apply plugin: 'war'
+
     apply plugin: 'kotlin'
     apply plugin: 'kotlin-spring'
+    apply plugin: 'kotlin-jpa'
+
     apply plugin: 'idea'
     apply plugin: 'eclipse'
     apply plugin: 'org.springframework.boot'
@@ -51,22 +56,36 @@ allprojects {
         imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
     }
 
+    test {
+        useJUnitPlatform()
+    }
+
     dependencies {
-        compile('org.springframework.boot:spring-boot-starter')
-        compile('org.springframework.boot:spring-boot-starter-data-jpa')
-        compile('org.springframework.boot:spring-boot-starter-web')
-        compile('org.springframework.boot:spring-boot-starter-freemarker')
+        compile("org.springframework.boot:spring-boot-starter")
+        compile("org.springframework.boot:spring-boot-starter-data-jpa")
+        compile("org.springframework.boot:spring-boot-starter-web")
+        compile("org.springframework.boot:spring-boot-starter-freemarker")
 
-        runtime('org.springframework.boot:spring-boot-devtools')
-        
-        //Kotlin
-        compile('com.fasterxml.jackson.module:jackson-module-kotlin')
+        compile("org.springframework.boot:spring-boot-starter-mustache")
+
+        /** Kotlin */
+        //Java 8 variant of Kotlin standard library
         compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+        //Kotlin reflection library (mandatory as of Spring Framework 5)
         compile("org.jetbrains.kotlin:kotlin-reflect")
+        //adds support for serialization/deserialization of Kotlin classes and data classes
+        compile("com.fasterxml.jackson.module:jackson-module-kotlin")
 
+        compile("com.h2database:h2:1.4.196")
         compile("org.modelmapper:modelmapper:1.1.2")
 
-        testCompile('org.springframework.boot:spring-boot-starter-test')
+        runtime("org.springframework.boot:spring-boot-devtools")
+
+        testCompile("org.springframework.boot:spring-boot-starter-test") {
+            exclude module: "junit"
+        }
+        testImplementation("org.junit.jupiter:junit-jupiter-api")
+        testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
     }
 }
 
