--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'boot'
 
 include('platform:platform-commons')
+include('platform:platform-amqp')
 
 include('service:index-service')
 include('service:item-service')
