--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'boot'
 
+include('learning:algorithms')
+
 include('platform:platform-commons')
 include('platform:platform-amqp')
 
