--- a/vue/commons-vue/package.json
+++ b/vue/commons-vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "platform-vue",
+  "name": "commons-vue",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "sunjc <sunjc@startimes.com.cn>",
