--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'boot'
 
 include('learning:algorithms')
+include('learning:design')
 
 include('platform:platform-commons')
 include('platform:platform-amqp')
