--- a/build.gradle
+++ b/build.gradle
@@ -85,15 +85,49 @@ allprojects {
         useJUnitPlatform()
     }
 
+    ext {
+        junitVersion = '4.12'
+
+        guavaVersion = '27.0.1-jre'
+        modelmapperVersion = '1.1.2'
+
+        logbackVersion = ''
+        slf4jVersion = ''
+
+        ehcacheVersion = ''
+        cglibVersion = ''
+
+        mySQLVersion = '8.0.13'
+
+        hibernateVersion = '5.4.0.Final'
+        mybatisVersion = '3.6.4'
+        mybatisSpringVersion = '1.3.2'
+        pagehelperVersion = '5.1.8'
+
+        commonsLang3Version = '3.8.1'
+        commonsCollectionsVersion = '3.2.2'
+        commonsCollections4Version = '4.2'
+
+        druidVersion = ''
+        fastjsonVersion = ''
+        rabbitmqVersion = ''
+
+        //
+        log4jVersion = ''
+        commonsLoggingVersion = ''
+        apacheLog4jVersion = ''
+        slf4jLog4j12Version = ''
+    }
+
     dependencies {
+        /** Spring Boot */
         compile("org.springframework.boot:spring-boot-starter")
         compile("org.springframework.boot:spring-boot-starter-web")
         compile("org.springframework.boot:spring-boot-starter-data-jpa")
-        compile("org.springframework.boot:spring-boot-starter-freemarker")
         compile("org.springframework.boot:spring-boot-starter-security")
-        //compile("org.springframework.boot:spring-boot-starter-session")
 
-        compile("org.springframework.boot:spring-boot-starter-mustache")
+        compile("org.springframework.boot:spring-boot-starter-freemarker")
+        compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 
         /** Kotlin */
         //Java 8 variant of Kotlin standard library
@@ -103,15 +137,28 @@ allprojects {
         //adds support for serialization/deserialization of Kotlin classes and data classes
         compile("com.fasterxml.jackson.module:jackson-module-kotlin")
 
-        compile("com.h2database:h2:1.4.196")
+        // Google Guava
+        compile("com.google.guava:guava:${guavaVersion}")
+        // ModelMapper
+        compile("org.modelmapper:modelmapper:${modelmapperVersion}")
 
-        compile("org.modelmapper:modelmapper:1.1.2")
+        // MySQL
+        compile("mysql:mysql-connector-java:${mySQLVersion}")
 
-        compile("com.google.guava:guava:25.0-jre")
+        // Hibernate
+        compile("org.hibernate:hibernate-entitymanager:${hibernateVersion}")
+        compile("com.github.hibernate-redis:hibernate-redis:${hibernateRedisVersion}")
 
-        compile("org.apache.commons:commons-lang3:3.8.1")
-        compile("commons-collections:commons-collections:3.2.2")
-        compile("commons-io:commons-io:2.6")
+        // MyBatis
+        compile("org.mybatis:mybatis:${mybatisVersion}")
+        compile("org.mybatis:mybatis-spring:${mybatisSpringVersion}")
+        compile("com.github.pagehelper:pagehelper:${pagehelperVersion}")
+
+        // Commons
+        compile("org.apache.commons:commons-lang3:${commonsLang3Version}")
+        compile("commons-collections:commons-collections:${commonsCollectionsVersion}")
+        compile("org.apache.commons:commons-collections4:${commonsCollections4Version}")
+        compile("commons-io:commons-io:${commonsIOVersion}")
 
         runtime("org.springframework.boot:spring-boot-devtools")
 
@@ -119,7 +166,7 @@ allprojects {
             exclude(module: "junit")
             exclude(module: "commons-logging")
         }
-        testCompile("junit:junit:4.12")
+        testCompile("junit:junit:${junitVersion}")
         testCompile("org.junit.jupiter:junit-jupiter-api")
         testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
     }
