--- a/vue/commons-vue/package.json
+++ b/vue/commons-vue/package.json
@@ -5,9 +5,9 @@
   "author": "sunjc <sunjc@startimes.com.cn>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --progress --config script/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node script/build.js"
   },
   "dependencies": {
     "vue": "^2.5.2",
