--- a/build.gradle
+++ b/build.gradle
@@ -100,13 +100,13 @@ allprojects {
         mySQLVersion = '8.0.13'
 
         hibernateVersion = '5.4.0.Final'
-        mybatisVersion = '3.6.4'
+        mybatisVersion = '3.4.6'
         mybatisSpringVersion = '1.3.2'
         pagehelperVersion = '5.1.8'
 
         commonsLang3Version = '3.8.1'
         commonsCollectionsVersion = '3.2.2'
-        commonsCollections4Version = '4.2'
+        commonsIoVersion = '2.6'
 
         druidVersion = ''
         fastjsonVersion = ''
@@ -147,7 +147,7 @@ allprojects {
 
         // Hibernate
         compile("org.hibernate:hibernate-entitymanager:${hibernateVersion}")
-        compile("com.github.hibernate-redis:hibernate-redis:${hibernateRedisVersion}")
+        //compile("com.github.hibernate-redis:hibernate-redis:${hibernateRedisVersion}")
 
         // MyBatis
         compile("org.mybatis:mybatis:${mybatisVersion}")
@@ -157,8 +157,7 @@ allprojects {
         // Commons
         compile("org.apache.commons:commons-lang3:${commonsLang3Version}")
         compile("commons-collections:commons-collections:${commonsCollectionsVersion}")
-        compile("org.apache.commons:commons-collections4:${commonsCollections4Version}")
-        compile("commons-io:commons-io:${commonsIOVersion}")
+        compile("commons-io:commons-io:${commonsIoVersion}")
 
         runtime("org.springframework.boot:spring-boot-devtools")
 
