remove Node for Vue, need more test

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         springBootVersion = '2.1.1.RELEASE'
         kotlinVersion = '1.3.11'
-        nodeVersion = '1.2.0'
+        /*nodeVersion = '1.2.0'*/
     }
     repositories {
         mavenLocal()
@@ -16,7 +16,7 @@ buildscript {
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
-        classpath("com.moowork.gradle:gradle-node-plugin:${nodeVersion}")
+        /*classpath("com.moowork.gradle:gradle-node-plugin:${nodeVersion}")*/
     }
 }
 
@@ -35,12 +35,12 @@ allprojects {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
     //Node
-    apply plugin: "com.moowork.node"
+    /*apply plugin: "com.moowork.node"*/
 
     group = 'com.spring'
     version = '0.0.1-SNAPSHOT'
 
-    description = """spring-boot"""
+    description = "spring-boot"
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
@@ -49,11 +49,11 @@ allprojects {
         options.encoding = 'UTF-8'
     }
 
-    node {
+    /*node {
         version = '8.12.0'
         npmVersion = '6.5.0'
         download = true
-    }
+    }*/
 
     compileKotlin {
         kotlinOptions {
@@ -170,7 +170,7 @@ allprojects {
         testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
     }
 
-    task npmBuild(type: NpmTask, dependsOn: 'npmInstall') {
+    /*task npmBuild(type: NpmTask, dependsOn: 'npmInstall') {
         group = 'node'
         args = ['run', 'build']
     }
@@ -190,5 +190,5 @@ allprojects {
     }
 
     processResources.dependsOn 'webpack'
-    clean.delete << file('node_modules')
+    clean.delete << file('node_modules')*/
 }
