--- a/build.gradle
+++ b/build.gradle
@@ -102,12 +102,46 @@ allprojects {
     dependencies {
         /** Spring Boot */
         compile("org.springframework.boot:spring-boot-starter")
+        compile("org.springframework.boot:spring-boot-starter-aop")
         compile("org.springframework.boot:spring-boot-starter-web")
+        compile("org.springframework.boot:spring-boot-starter-amqp")
+        compile("org.springframework.boot:spring-boot-starter-batch")
+        compile("org.springframework.boot:spring-boot-starter-cache")
         compile("org.springframework.boot:spring-boot-starter-data-jpa")
-        compile("org.springframework.boot:spring-boot-starter-security")
+        compile("org.springframework.boot:spring-boot-starter-data-jdbc")
+        compile("org.springframework.boot:spring-boot-starter-data-redis")
+        compile("org.springframework.boot:spring-boot-starter-data-mongodb")
+        compile("org.springframework.boot:spring-boot-starter-data-solr")
 
+        compile("org.springframework.boot:spring-boot-starter-security")
+        compile("org.springframework.boot:spring-boot-starter-oauth2-client")
+        compile("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
+
+        compile("org.springframework.boot:spring-boot-starter-validation")
+        compile("org.springframework.boot:spring-boot-starter-quartz")
+        compile("org.springframework.boot:spring-boot-starter-json")
+        compile("org.springframework.boot:spring-boot-starter-mail")
+
+        compile("org.springframework.boot:spring-boot-starter-webflux")
+        compile("org.springframework.boot:spring-boot-starter-web-services")
+        compile("org.springframework.boot:spring-boot-starter-websocket")
+
+        //Logback 默认日志启动器
+        //compile("org.springframework.boot:spring-boot-starter-logging")
+        //使用Log4j2进行日志记录,替代spring-boot-starter-logging
+        compile("org.springframework.boot:spring-boot-starter-log4j2")
+        //compile("org.springframework.boot:spring-boot-starter-reactor-netty")
+        //compile("org.springframework.boot:spring-boot-starter-jetty")
+        //compile("org.springframework.boot:spring-boot-starter-tomcat")
+
+        //compile("org.springframework.boot:spring-boot-starter-groovy-templates")
+        compile("org.springframework.boot:spring-boot-starter-jersey")
         compile("org.springframework.boot:spring-boot-starter-freemarker")
         compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+
+        compile("org.springframework.boot:spring-boot-starter-actuator")
+
+        //compile("org.springframework.boot:spring-boot-starter-cloud-connectors")
 
         compile("org.projectlombok:lombok:${lombokVersion}")
 
