--- a/service/index-service/src/main/resources/application.yml
+++ b/service/index-service/src/main/resources/application.yml
@@ -1,14 +1,30 @@
-spring.datasource.url:
-spring.datasource.username:
-spring.datasource.password:
-spring.datasource.driver-class-name:
-spring.datasource.max-idle: 10
-spring.datasource.max-wait: 10000
-spring.datasource.min-idle: 5
-spring.datasource.initial-size: 5
+spring:
+  datasource:
+    driver-class-name:
+    url:
+    username:
+    password:
+    max-idle:
+    max-wait:
+    min-idle:
+    initial-size:
+  redis:
+    host:
+    port:
+    password:
+    timeout:
+  rabbitmq:
+    host:
+    port:
+    username:
+    password:
+  data:
+    solr:
+      host:
 
 server:
   port: 8080
   session:
     timeout:: 10
-server.tomcat.uri-encoding: UTF-8
+  tomcat:
+    uri-encoding: UTF-8
