--- a/build.gradle
+++ b/build.gradle
@@ -16,35 +16,20 @@ buildscript {
     }
 }
 
-allprojects {
+group = 'com.spring'
+version = '0.0.1-SNAPSHOT'
+description = "spring-boot"
+
+configure(allprojects.findAll { it.subprojects.empty }) {
     //Java
     apply plugin: 'java'
+
     //IDE
     apply plugin: 'idea'
     apply plugin: 'eclipse'
-    //Spring Boot
-    apply plugin: 'org.springframework.boot'
-    apply plugin: 'io.spring.dependency-management'
-    //Node
-    /*apply plugin: "com.moowork.node"*/
-
-    group = 'com.spring'
-    version = '0.0.1-SNAPSHOT'
-
-    description = "spring-boot"
 
     sourceCompatibility = 11
     targetCompatibility = 11
-
-    tasks.withType(JavaCompile) {
-        options.encoding = 'UTF-8'
-    }
-
-    /*node {
-        version = '8.12.0'
-        npmVersion = '6.5.0'
-        download = true
-    }*/
 
     repositories {
         mavenLocal()
@@ -54,8 +39,8 @@ allprojects {
         jcenter()
     }
 
-    dependencyManagement {
-        imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
     }
 
     test {
@@ -63,22 +48,17 @@ allprojects {
     }
 
     ext {
-        junitVersion = '4.12'
+        springVersion = '5.1.3.RELEASE'
 
         lombokVersion = '1.18.4'
 
         guavaVersion = '27.0.1-jre'
         modelmapperVersion = '1.1.2'
 
-        logbackVersion = ''
-        slf4jVersion = ''
-
-        ehcacheVersion = ''
-        cglibVersion = ''
-
         mySQLVersion = '8.0.13'
 
         hibernateVersion = '5.4.0.Final'
+
         mybatisVersion = '3.4.6'
         mybatisSpringVersion = '1.3.2'
         pagehelperVersion = '5.1.8'
@@ -87,16 +67,56 @@ allprojects {
         commonsCollectionsVersion = '3.2.2'
         commonsIoVersion = '2.6'
 
-        druidVersion = ''
-        fastjsonVersion = ''
-        rabbitmqVersion = ''
+        slf4jVersion = '1.7.25'
 
-        //
-        log4jVersion = ''
-        commonsLoggingVersion = ''
-        apacheLog4jVersion = ''
-        slf4jLog4j12Version = ''
+        junitVersion = '4.12'
     }
+
+    dependencies {
+        //Lombok
+        compile("org.projectlombok:lombok:${lombokVersion}")
+
+        // Google Guava
+        compile("com.google.guava:guava:${guavaVersion}")
+
+        // ModelMapper
+        compile("org.modelmapper:modelmapper:${modelmapperVersion}")
+
+        // MySQL
+        compile("mysql:mysql-connector-java:${mySQLVersion}")
+
+        // Hibernate
+        compile("org.hibernate:hibernate-core:${hibernateVersion}")
+        //compile("com.github.hibernate-redis:hibernate-redis:${hibernateRedisVersion}")
+
+        // MyBatis
+        compile("org.mybatis:mybatis:${mybatisVersion}")
+        compile("org.mybatis:mybatis-spring:${mybatisSpringVersion}")
+        compile("com.github.pagehelper:pagehelper:${pagehelperVersion}")
+
+        // Commons
+        compile("org.apache.commons:commons-lang3:${commonsLang3Version}")
+        compile("commons-collections:commons-collections:${commonsCollectionsVersion}")
+        compile("commons-io:commons-io:${commonsIoVersion}")
+
+        //Slf4j
+        compile("org.slf4j:slf4j-api:${slf4jVersion}")
+        compile("org.slf4j:slf4j-log4j12:${slf4jVersion}")
+
+        testCompile("junit:junit:${junitVersion}")
+    }
+}
+
+configure(subprojects.findAll {
+    it.subprojects.empty && (it.name.endsWith('-service') || it.name.endsWith('-web'))
+}) {
+    //Spring Boot
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+    //Node
+    /*apply plugin: "com.moowork.node"*/
+
+    ext {}
 
     dependencies {
         /** Spring Boot */
@@ -141,60 +161,13 @@ allprojects {
         //compile("org.springframework.boot:spring-boot-starter-actuator")
         //compile("org.springframework.boot:spring-boot-starter-cloud-connectors")
 
-        compile("org.projectlombok:lombok:${lombokVersion}")
-
-        // Google Guava
-        compile("com.google.guava:guava:${guavaVersion}")
-        // ModelMapper
-        compile("org.modelmapper:modelmapper:${modelmapperVersion}")
-
-        // MySQL
-        compile("mysql:mysql-connector-java:${mySQLVersion}")
-
-        // Hibernate
-        compile("org.hibernate:hibernate-core:${hibernateVersion}")
-        //compile("com.github.hibernate-redis:hibernate-redis:${hibernateRedisVersion}")
-
-        // MyBatis
-        compile("org.mybatis:mybatis:${mybatisVersion}")
-        compile("org.mybatis:mybatis-spring:${mybatisSpringVersion}")
-        compile("com.github.pagehelper:pagehelper:${pagehelperVersion}")
-
-        // Commons
-        compile("org.apache.commons:commons-lang3:${commonsLang3Version}")
-        compile("commons-collections:commons-collections:${commonsCollectionsVersion}")
-        compile("commons-io:commons-io:${commonsIoVersion}")
-
         runtime("org.springframework.boot:spring-boot-devtools")
 
         testCompile("org.springframework.boot:spring-boot-starter-test") {
             exclude(module: "junit")
             exclude(module: "commons-logging")
         }
-        testCompile("junit:junit:${junitVersion}")
         testCompile("org.junit.jupiter:junit-jupiter-api")
         testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
     }
-
-    /*task npmBuild(type: NpmTask, dependsOn: 'npmInstall') {
-        group = 'node'
-        args = ['run', 'build']
-    }
-
-    task npmDev(type: NpmTask, dependsOn: npmInstall) {
-        group = 'node'
-        args = ['run', 'dev']
-    }
-
-    task webpack(type: NodeTask, dependsOn: 'npmInstall') {
-        def osName = System.getProperty("os.name").toLowerCase();
-        if (osName.contains("windows")) {
-            script = project.file('node_modules/webpack/bin/webpack.js')
-        } else {
-            script = project.file('node_modules/.bin/webpack')
-        }
-    }
-
-    processResources.dependsOn 'webpack'
-    clean.delete << file('node_modules')*/
 }
