--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
     repositories {
         mavenLocal()
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public'}
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
         maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
         jcenter()
@@ -33,7 +33,7 @@ configure(allprojects.findAll { it.subprojects.empty }) {
 
     repositories {
         mavenLocal()
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public'}
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
         maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
         jcenter()
@@ -156,11 +156,6 @@ configure(subprojects.findAll {
 
         runtime("org.springframework.boot:spring-boot-devtools")
 
-        testCompile("org.springframework.boot:spring-boot-starter-test") {
-            exclude(module: "junit")
-            exclude(module: "commons-logging")
-        }
-        testCompile("org.junit.jupiter:junit-jupiter-api")
-        testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
+        testCompile("org.springframework.boot:spring-boot-starter-test")
     }
 }
