--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
     ext {
         springBootVersion = '2.1.1.RELEASE'
+        springCloudVersion = 'Finchley.SR1'
+        springCloudAliVersion = '0.2.1.RELEASE'
         kotlinVersion = '1.3.11'
-        /*nodeVersion = '1.2.0'*/
     }
     repositories {
         mavenLocal()
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public'}
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
         maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
         jcenter()
@@ -16,7 +17,6 @@ buildscript {
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
-        /*classpath("com.moowork.gradle:gradle-node-plugin:${nodeVersion}")*/
     }
 }
 
@@ -71,7 +71,7 @@ allprojects {
 
     repositories {
         mavenLocal()
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public'}
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
         maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
         jcenter()
@@ -79,6 +79,8 @@ allprojects {
 
     dependencyManagement {
         imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
+        imports { mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}") }
+        imports { mavenBom("org.springframework.cloud:spring-cloud-alibaba-dependencies:${springCloudAliVersion}") }
     }
 
     test {
@@ -169,26 +171,4 @@ allprojects {
         testCompile("org.junit.jupiter:junit-jupiter-api")
         testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
     }
-
-    /*task npmBuild(type: NpmTask, dependsOn: 'npmInstall') {
-        group = 'node'
-        args = ['run', 'build']
-    }
-
-    task npmDev(type: NpmTask, dependsOn: npmInstall) {
-        group = 'node'
-        args = ['run', 'dev']
-    }
-
-    task webpack(type: NodeTask, dependsOn: 'npmInstall') {
-        def osName = System.getProperty("os.name").toLowerCase();
-        if (osName.contains("windows")) {
-            script = project.file('node_modules/webpack/bin/webpack.js')
-        } else {
-            script = project.file('node_modules/.bin/webpack')
-        }
-    }
-
-    processResources.dependsOn 'webpack'
-    clean.delete << file('node_modules')*/
 }
