--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext {
         springBootVersion = '2.1.1.RELEASE'
-//        springCloudVersion = 'Finchley.SR1'
-//        springCloudAliVersion = '0.2.1.RELEASE'
+        springCloudVersion = 'Finchley.RELEASE'
+        springCloudAliVersion = '0.2.1.RELEASE'
     }
     repositories {
         mavenLocal()
@@ -19,14 +19,6 @@ buildscript {
 group = 'com.spring'
 version = '0.0.1-SNAPSHOT'
 description = "spring-boot"
-
-//allprojects {
-//    dependencyManagement {
-//        imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
-//        imports { mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}") }
-//        imports { mavenBom("org.springframework.cloud:spring-cloud-alibaba-dependencies:${springCloudAliVersion}") }
-//    }
-//}
 
 configure(allprojects.findAll { it.subprojects.empty }) {
     //Java
@@ -49,10 +41,6 @@ configure(allprojects.findAll { it.subprojects.empty }) {
 
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
-    }
-
-    test {
-        useJUnitPlatform()
     }
 
     ext {
@@ -78,33 +66,33 @@ configure(allprojects.findAll { it.subprojects.empty }) {
 
     dependencies {
         //Lombok
-        compile("org.projectlombok:lombok:${lombokVersion}")
+        implementation("org.projectlombok:lombok:${lombokVersion}")
 
         // Google Guava
-        compile("com.google.guava:guava:${guavaVersion}")
+        implementation("com.google.guava:guava:${guavaVersion}")
 
         // ModelMapper
-        compile("org.modelmapper:modelmapper:${modelmapperVersion}")
+        implementation("org.modelmapper:modelmapper:${modelmapperVersion}")
 
         // MySQL
-        compile("mysql:mysql-connector-java:${mySQLVersion}")
+        implementation("mysql:mysql-connector-java:${mySQLVersion}")
 
         // Hibernate
-        compile("org.hibernate:hibernate-core:${hibernateVersion}")
-        //compile("com.github.hibernate-redis:hibernate-redis:${hibernateRedisVersion}")
+        implementation("org.hibernate:hibernate-core:${hibernateVersion}")
+        //implementation("com.github.hibernate-redis:hibernate-redis:${hibernateRedisVersion}")
 
         // MyBatis
-        compile("org.mybatis:mybatis:${mybatisVersion}")
-        compile("org.mybatis:mybatis-spring:${mybatisSpringVersion}")
-        compile("com.github.pagehelper:pagehelper:${pagehelperVersion}")
+        implementation("org.mybatis:mybatis:${mybatisVersion}")
+        implementation("org.mybatis:mybatis-spring:${mybatisSpringVersion}")
+        implementation("com.github.pagehelper:pagehelper:${pagehelperVersion}")
 
         // Commons
-        compile("org.apache.commons:commons-lang3:${commonsLang3Version}")
-        compile("commons-collections:commons-collections:${commonsCollectionsVersion}")
-        compile("commons-io:commons-io:${commonsIoVersion}")
+        implementation("org.apache.commons:commons-lang3:${commonsLang3Version}")
+        implementation("commons-collections:commons-collections:${commonsCollectionsVersion}")
+        implementation("commons-io:commons-io:${commonsIoVersion}")
 
         //Junit
-        testCompile("junit:junit:${junitVersion}")
+        testImplementation("junit:junit:${junitVersion}")
     }
 }
 
@@ -118,53 +106,61 @@ configure(subprojects.findAll {
     //Node
     /*apply plugin: "com.moowork.node"*/
 
+    dependencyManagement {
+        imports {
+            mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
+            mavenBom("org.springframework.cloud:spring-cloud-alibaba-dependencies:${springCloudAliVersion}")
+        }
+    }
+
     ext {}
 
     dependencies {
         /** Spring Boot */
-        compile("org.springframework.boot:spring-boot-starter")
-        compile("org.springframework.boot:spring-boot-starter-aop")
-        compile("org.springframework.boot:spring-boot-starter-web")
-        compile("org.springframework.boot:spring-boot-starter-amqp")
-        compile("org.springframework.boot:spring-boot-starter-batch")
-        compile("org.springframework.boot:spring-boot-starter-cache")
-        compile("org.springframework.boot:spring-boot-starter-data-jpa")
-        compile("org.springframework.boot:spring-boot-starter-data-jdbc")
-        compile("org.springframework.boot:spring-boot-starter-data-redis")
-        //compile("org.springframework.boot:spring-boot-starter-data-mongodb")
-        //compile("org.springframework.boot:spring-boot-starter-data-solr")
+        implementation("org.springframework.boot:spring-boot-starter")
+        implementation("org.springframework.boot:spring-boot-starter-aop")
+        implementation("org.springframework.boot:spring-boot-starter-web")
+        implementation("org.springframework.boot:spring-boot-starter-amqp")
+        implementation("org.springframework.boot:spring-boot-starter-batch")
+        implementation("org.springframework.boot:spring-boot-starter-cache")
+        implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+        implementation("org.springframework.boot:spring-boot-starter-data-jdbc")
+        implementation("org.springframework.boot:spring-boot-starter-data-redis")
+        //implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
+        //implementation("org.springframework.boot:spring-boot-starter-data-solr")
 
-        compile("org.springframework.boot:spring-boot-starter-security")
-        //compile("org.springframework.boot:spring-boot-starter-oauth2-client")
-        //compile("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
+        implementation("org.springframework.boot:spring-boot-starter-security")
+        //implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
+        //implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
 
-        compile("org.springframework.boot:spring-boot-starter-validation")
-        compile("org.springframework.boot:spring-boot-starter-quartz")
-        compile("org.springframework.boot:spring-boot-starter-json")
-        compile("org.springframework.boot:spring-boot-starter-mail")
+        implementation("org.springframework.boot:spring-boot-starter-validation")
+        implementation("org.springframework.boot:spring-boot-starter-quartz")
+        implementation("org.springframework.boot:spring-boot-starter-json")
+        implementation("org.springframework.boot:spring-boot-starter-mail")
 
-        compile("org.springframework.boot:spring-boot-starter-webflux")
-        compile("org.springframework.boot:spring-boot-starter-web-services")
-        compile("org.springframework.boot:spring-boot-starter-websocket")
+        implementation("org.springframework.boot:spring-boot-starter-webflux")
+        implementation("org.springframework.boot:spring-boot-starter-web-services")
+        implementation("org.springframework.boot:spring-boot-starter-websocket")
 
         //Logback 默认日志启动器
-        //compile("org.springframework.boot:spring-boot-starter-logging")
+        //implementation("org.springframework.boot:spring-boot-starter-logging")
         //使用Log4j2进行日志记录,替代spring-boot-starter-logging
-        //compile("org.springframework.boot:spring-boot-starter-log4j2")
-        //compile("org.springframework.boot:spring-boot-starter-reactor-netty")
-        //compile("org.springframework.boot:spring-boot-starter-jetty")
-        //compile("org.springframework.boot:spring-boot-starter-tomcat")
+        //implementation("org.springframework.boot:spring-boot-starter-log4j2")
+        //implementation("org.springframework.boot:spring-boot-starter-reactor-netty")
+        //implementation("org.springframework.boot:spring-boot-starter-jetty")
+        //implementation("org.springframework.boot:spring-boot-starter-tomcat")
 
-        compile("org.springframework.boot:spring-boot-starter-jersey")
-        compile("org.springframework.boot:spring-boot-starter-freemarker")
-        compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-        //compile("org.springframework.boot:spring-boot-starter-groovy-templates")
+        implementation("org.springframework.boot:spring-boot-starter-jersey")
+        implementation("org.springframework.boot:spring-boot-starter-freemarker")
+        implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+        //implementation("org.springframework.boot:spring-boot-starter-groovy-templates")
 
-        //compile("org.springframework.boot:spring-boot-starter-actuator")
-        //compile("org.springframework.boot:spring-boot-starter-cloud-connectors")
+        //implementation("org.springframework.boot:spring-boot-starter-actuator")
+        //implementation("org.springframework.boot:spring-boot-starter-cloud-connectors")
 
         runtime("org.springframework.boot:spring-boot-devtools")
 
-        testCompile("org.springframework.boot:spring-boot-starter-test")
+        testImplementation("org.springframework.boot:spring-boot-starter-test")
     }
 }
