update some settings

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,9 +3,9 @@ rootProject.name = 'boot'
 include('learning:algorithms')
 include('learning:design')
 
-//include('platform:platform-commons')
-//include('platform:platform-config')
-//include('platform:platform-amqp')
+include('platform:platform-commons')
+include('platform:platform-config')
+include('platform:platform-amqp')
 
 include('service:index-service')
 
