--- a/build.gradle
+++ b/build.gradle
@@ -159,8 +159,48 @@ configure(subprojects.findAll {
         //implementation("org.springframework.boot:spring-boot-starter-actuator")
         //implementation("org.springframework.boot:spring-boot-starter-cloud-connectors")
 
-        runtime("org.springframework.boot:spring-boot-devtools")
+        //runtime("org.springframework.boot:spring-boot-devtools")
 
         testImplementation("org.springframework.boot:spring-boot-starter-test")
     }
+}
+
+configure(subprojects.findAll {
+    it.subprojects.empty && (it.name.startsWith('platform-'))
+}) {
+
+    ext {}
+
+    dependencies {
+        /** Spring Boot */
+        implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-aop:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-amqp:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-batch:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-cache:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-data-jdbc:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-data-redis:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
+        //implementation("org.springframework.boot:spring-boot-starter-data-solr")
+
+        //implementation("org.springframework.boot:spring-boot-starter-security:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
+        //implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
+
+        //implementation("org.springframework.boot:spring-boot-starter-validation:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-quartz:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-json:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-mail:${springBootVersion}")
+
+        //implementation("org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-web-services:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-websocket:${springBootVersion}")
+
+        //implementation("org.springframework.boot:spring-boot-starter-jersey:${springBootVersion}")
+
+        testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+    }
+
 }
