--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'boot'
 
 include('learning:algorithms')
 include('learning:design')
+include('learning:origin')
 
 include('platform:platform-commons')
 include('platform:platform-config')
