--- a/service/index/index-service/build.gradle
+++ b/service/index/index-service/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
+    implementation project(':platform:platform-commons')
+
     implementation project(":service:index:index-api")
 }
