--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.3.RELEASE'
-        springCloudVersion = 'Finchley.RELEASE'
-        springCloudAliVersion = '0.2.1.RELEASE'
+        springBootVersion = "2.1.3.RELEASE"
+        springCloudVersion = "Finchley.RELEASE"
+        springCloudAliVersion = "0.2.1.RELEASE"
     }
     repositories {
         mavenLocal()
@@ -50,29 +50,28 @@ configure(allprojects.findAll { it.subprojects.empty }) {
     }
 
     ext {
-        lombokVersion = '1.18.4'
+        lombokVersion = "1.18.4"
 
-        guavaVersion = '27.0.1-jre'
-        modelmapperVersion = '1.1.2'
-        orikaVersion = '1.5.4'
+        guavaVersion = "27.0.1-jre"
 
-        mySQLVersion = '8.0.13'
+        modelmapperVersion = "1.1.2"
+        orikaVersion = "1.5.4"
 
-        hibernateVersion = '5.4.0.Final'
+        dom4jVesion = "2.1.1"
+        yamljVesion = "1.18"
+        fastJosnVersion = "1.2.56"
 
-        mybatisVersion = '3.4.6'
-        mybatisSpringVersion = '1.3.2'
-        pagehelperVersion = '5.1.8'
+        commonsIoVersion = "2.6"
+        commonsCodecVersion = "1.11"
+        commonsLang3Version = "3.8.1"
+        commonsBeanutilsVersion = "1.9.3"
+        commonsCollectionsVersion = "3.2.2"
 
-        commonsLang3Version = '3.8.1'
-        commonsCollectionsVersion = '3.2.2'
-        commonsIoVersion = '2.6'
-
-        junitVersion = '4.12'
+        junitVersion = "4.12"
     }
 
     dependencies {
-        //Lombok
+        // Lombok
         compileOnly ("org.projectlombok:lombok:${lombokVersion}")
         annotationProcessor ("org.projectlombok:lombok:${lombokVersion}")
 
@@ -81,26 +80,22 @@ configure(allprojects.findAll { it.subprojects.empty }) {
 
         // ModelMapper
         implementation("org.modelmapper:modelmapper:${modelmapperVersion}")
-
-        //Orika
+        // Orika
         implementation("ma.glasnost.orika:orika-core:${orikaVersion}")
 
-        // MySQL
-        implementation("mysql:mysql-connector-java:${mySQLVersion}")
-
-        // Hibernate
-        implementation("org.hibernate:hibernate-core:${hibernateVersion}")
-        //implementation("com.github.hibernate-redis:hibernate-redis:${hibernateRedisVersion}")
-
-        // MyBatis
-        implementation("org.mybatis:mybatis:${mybatisVersion}")
-        implementation("org.mybatis:mybatis-spring:${mybatisSpringVersion}")
-        implementation("com.github.pagehelper:pagehelper:${pagehelperVersion}")
+        //Dom4J
+        implementation("org.dom4j:dom4j:${dom4jVesion}")
+        //YAML
+        implementation("org.yaml:snakeyaml:${yamljVesion}")
+        //FastJSON
+        implementation("com.alibaba:fastjson:${fastJosnVersion}")
 
         // Commons
-        implementation("org.apache.commons:commons-lang3:${commonsLang3Version}")
-        implementation("commons-collections:commons-collections:${commonsCollectionsVersion}")
         implementation("commons-io:commons-io:${commonsIoVersion}")
+        implementation("commons-codec:commons-codec:${commonsCodecVersion}")
+        implementation("org.apache.commons:commons-lang3:${commonsLang3Version}")
+        implementation("commons-beanutils:commons-beanutils:${commonsBeanutilsVersion}")
+        implementation("commons-collections:commons-collections:${commonsCollectionsVersion}")
 
         //Junit
         testImplementation("junit:junit:${junitVersion}")
@@ -123,52 +118,97 @@ configure(subprojects.findAll {
     }
 
     ext {
-        rocketMqVersion = '4.4.0'
+        rocketMqVersion = "4.4.0"
+
+        druidVersion = "1.1.14"
+
+        hibernateVersion = "5.4.0.Final"
+
+        mybatisVersion = "3.4.6"
+        mybatisSpringVersion = "1.3.2"
+        pagehelperVersion = "5.1.8"
     }
 
     dependencies {
-        /** Spring Boot */
-        implementation("org.springframework.boot:spring-boot-starter")
-        implementation("org.springframework.boot:spring-boot-starter-aop")
-        implementation("org.springframework.boot:spring-boot-starter-amqp")
-        implementation("org.springframework.boot:spring-boot-starter-batch")
-        implementation("org.springframework.boot:spring-boot-starter-cache")
-        implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-        implementation("org.springframework.boot:spring-boot-starter-data-jdbc")
-        implementation("org.springframework.boot:spring-boot-starter-data-redis")
-        //implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
-        //implementation("org.springframework.boot:spring-boot-starter-data-solr")
+        // Spring Boot
+        implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+        // Spring AOP
+        implementation("org.springframework.boot:spring-boot-starter-aop:${springBootVersion}")
 
-        implementation("org.springframework.boot:spring-boot-starter-security")
-        //implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
-        //implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
+        // Spring Data JPA
+        implementation("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+        // Spring JDBC
+        implementation("org.springframework.boot:spring-boot-starter-data-jdbc:${springBootVersion}")
 
-        implementation("org.springframework.boot:spring-boot-starter-validation")
-        implementation("org.springframework.boot:spring-boot-starter-quartz")
-        implementation("org.springframework.boot:spring-boot-starter-json")
-        implementation("org.springframework.boot:spring-boot-starter-mail")
+        // Spring AMQP
+        implementation("org.springframework.boot:spring-boot-starter-amqp:${springBootVersion}")
+        // Spring Redis
+        implementation("org.springframework.boot:spring-boot-starter-data-redis:${springBootVersion}")
 
-        implementation("org.springframework.boot:spring-boot-starter-webflux")
-        implementation("org.springframework.boot:spring-boot-starter-web-services")
-        implementation("org.springframework.boot:spring-boot-starter-websocket")
+        // Spring Actuator
+        implementation("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}")
+
+        // Spring Security
+        implementation("org.springframework.boot:spring-boot-starter-security:${springBootVersion}")
+
+        // Spring WebFlux
+        implementation("org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}")
+        // Spring WebSocket
+        implementation("org.springframework.boot:spring-boot-starter-websocket:${springBootVersion}")
+
+        //Spring REST Jersey
+        implementation("org.springframework.boot:spring-boot-starter-jersey:${springBootVersion}")
+        // Spring Annotation-Validation
+        implementation("org.springframework.boot:spring-boot-starter-validation:${springBootVersion}")
+        // Spring JSON
+        implementation("org.springframework.boot:spring-boot-starter-json:${springBootVersion}")
+        // Spring Quartz
+        implementation("org.springframework.boot:spring-boot-starter-quartz:${springBootVersion}")
+        // Spring Mail
+        implementation("org.springframework.boot:spring-boot-starter-mail:${springBootVersion}")
+
+        // Druid
+        implementation("com.alibaba:druid:${druidVersion}")
+
+        // Hibernate
+        implementation("org.hibernate:hibernate-core:${hibernateVersion}")
+        //implementation("com.github.hibernate-redis:hibernate-redis:${hibernateRedisVersion}")
+
+        // MyBatis
+        implementation("org.mybatis:mybatis:${mybatisVersion}")
+        implementation("org.mybatis:mybatis-spring:${mybatisSpringVersion}")
+        implementation("com.github.pagehelper:pagehelper:${pagehelperVersion}")
+
+        // Spring Devtools
+        runtime("org.springframework.boot:spring-boot-devtools:${springBootVersion}")
+
+        // Spring Test
+        testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+
+        //NoSQL
+        //implementation("org.springframework.boot:spring-boot-starter-data-mongodb:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-data-solr:${springBootVersion}")
+
+        // OAuth2
+        //implementation("org.springframework.boot:spring-boot-starter-oauth2-client:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server:${springBootVersion}")
 
         //Logback 默认日志启动器
-        //implementation("org.springframework.boot:spring-boot-starter-logging")
+        //implementation("org.springframework.boot:spring-boot-starter-logging:${springBootVersion}")
         //使用Log4j2进行日志记录,替代spring-boot-starter-logging
-        //implementation("org.springframework.boot:spring-boot-starter-log4j2")
-        //implementation("org.springframework.boot:spring-boot-starter-reactor-netty")
-        //implementation("org.springframework.boot:spring-boot-starter-jetty")
-        //implementation("org.springframework.boot:spring-boot-starter-tomcat")
+        //implementation("org.springframework.boot:spring-boot-starter-log4j2:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-reactor-netty:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-jetty:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
 
-        implementation("org.springframework.boot:spring-boot-starter-jersey")
-        //implementation("org.springframework.boot:spring-boot-starter-groovy-templates")
+        // Spring-Cloud-Connectors
+        //implementation("org.springframework.boot:spring-boot-starter-cloud-connectors:${springBootVersion}")
 
-        implementation("org.springframework.boot:spring-boot-starter-actuator")
-        //implementation("org.springframework.boot:spring-boot-starter-cloud-connectors")
-
-        //runtime("org.springframework.boot:spring-boot-devtools")
-
-        testImplementation("org.springframework.boot:spring-boot-starter-test")
+        //Other
+        //implementation("org.springframework.boot:spring-boot-starter-batch:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-cache:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-groovy-templates:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-web-services:${springBootVersion}")
     }
 }
 
@@ -194,26 +234,46 @@ configure(subprojects.findAll {
     ext {}
 
     dependencies {
-        /** Spring Boot */
-        implementation("org.springframework.boot:spring-boot-starter")
-        implementation("org.springframework.boot:spring-boot-starter-web")
+        // Spring Boot
+        implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+        // Spring MVC
+        implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
 
-        implementation("org.springframework.boot:spring-boot-starter-security")
-        implementation("org.springframework.boot:spring-boot-starter-validation")
+        // Spring Redis
+        implementation("org.springframework.boot:spring-boot-starter-data-redis:${springBootVersion}")
 
-        implementation("org.springframework.boot:spring-boot-starter-json")
+        // Spring Actuator
+        implementation("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}")
 
-        implementation("org.springframework.boot:spring-boot-starter-webflux")
-        implementation("org.springframework.boot:spring-boot-starter-web-services")
-        implementation("org.springframework.boot:spring-boot-starter-websocket")
+        // Spring Security
+        implementation("org.springframework.boot:spring-boot-starter-security:${springBootVersion}")
 
-        implementation("org.springframework.boot:spring-boot-starter-jersey")
-        implementation("org.springframework.boot:spring-boot-starter-freemarker")
-        implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+        // Spring WebFlux
+        implementation("org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}")
+        // Spring WebSocket
+        implementation("org.springframework.boot:spring-boot-starter-websocket:${springBootVersion}")
 
-        implementation("org.springframework.boot:spring-boot-starter-actuator")
+        //Spring REST Jersey
+        implementation("org.springframework.boot:spring-boot-starter-jersey:${springBootVersion}")
+        // Spring Annotation-Validation
+        implementation("org.springframework.boot:spring-boot-starter-validation:${springBootVersion}")
+        // Spring JSON
+        implementation("org.springframework.boot:spring-boot-starter-json:${springBootVersion}")
+        // Spring Quartz
+        implementation("org.springframework.boot:spring-boot-starter-quartz:${springBootVersion}")
+        // Spring Mail
+        implementation("org.springframework.boot:spring-boot-starter-mail:${springBootVersion}")
 
-        testImplementation("org.springframework.boot:spring-boot-starter-test")
+        // Spring Freemarker
+        implementation("org.springframework.boot:spring-boot-starter-freemarker:${springBootVersion}")
+        // Spring Thymeleaf
+        implementation("org.springframework.boot:spring-boot-starter-thymeleaf:${springBootVersion}")
+
+        // Spring Devtools
+        runtime("org.springframework.boot:spring-boot-devtools:${springBootVersion}")
+
+        // Spring Test
+        testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
     }
 }
 
@@ -224,18 +284,26 @@ configure(subprojects.findAll {
     ext {}
 
     dependencies {
-        /** Spring Boot */
+        // Spring Boot
         implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+        // Spring AOP
         implementation("org.springframework.boot:spring-boot-starter-aop:${springBootVersion}")
+        // Spring AMQP
         implementation("org.springframework.boot:spring-boot-starter-amqp:${springBootVersion}")
-        implementation("org.springframework.boot:spring-boot-starter-batch:${springBootVersion}")
-        implementation("org.springframework.boot:spring-boot-starter-cache:${springBootVersion}")
+        // Spring Data JPA
         implementation("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+        // Spring JDBC
         implementation("org.springframework.boot:spring-boot-starter-data-jdbc:${springBootVersion}")
+        // Spring Redis
         implementation("org.springframework.boot:spring-boot-starter-data-redis:${springBootVersion}")
 
+        // Spring Validation
         implementation("org.springframework.boot:spring-boot-starter-validation:${springBootVersion}")
 
+        // Spring Devtools
+        runtime("org.springframework.boot:spring-boot-devtools:${springBootVersion}")
+
+        // Spring Test
         testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
     }
 
@@ -248,10 +316,13 @@ configure(subprojects.findAll {
     ext {}
 
     dependencies {
-        /** Spring Boot */
+        // Spring Boot
         implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+        //Spring REST Jersey
         implementation("org.springframework.boot:spring-boot-starter-jersey:${springBootVersion}")
-        testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+
+        // Spring Devtools
+        runtime("org.springframework.boot:spring-boot-devtools:${springBootVersion}")
     }
 
 }
